# cs7250-final-project

./: .gitattributes  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
.github/workflows/: main.yml
altair/: plotting.ipynb
app/: .prettierignore  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
app/public/: COUNTY_ZIP_122020.csv  COUNTY_ZIP_122023.csv  ba-summary.json  flattened.duckdb
app/public/geodata/: ba-data.geojson  county-data.geojson  us-states.geojson
app/src/: App.module.css  App.tsx  chart.ts  copy.tsx  dates.ts  detail-view.ts  formatters.ts  global.css  index.ts  index.tsx  prices.ts
app/src/charts/: CountyMapSvg.module.css  CountyMapSvg.tsx  EnergyTiersChart.tsx  LegendSelectionContext.tsx  baMap.ts  baMapSimple.ts  color.tsx  energyRateStructure.ts  energyRateStructure.tsx  interactiveLegend.ts  otherRateStructures.ts  otherRateStructures.tsx  tiers-utils.test.ts  tiers-utils.ts
app/test/: PriceInput.test.ts  schema.test.ts
data/: README.md  add_ba_column.py  convert-geojson.py  create-ba-summary.py  create-zip-county-mapping.sql  data.parquet  dynamically-priced-eiads.json  flattened.duckdb  geospatial-component.gpkg  import-mongo-formatted-usurdb.py  json.duckdb  modify-utility-names.py  preprocessing.py  process-wholesale-data.py  service_territory.py  simulate_usage.py  sqlite.db
data/raw/: sources.md  usurdb.csv  usurdb.json  zip-data.csv
progress/: Screen Recording 2025-11-18 at 10.31.43.mov
(+75 files in other folders)
