[project]
name = "cs7250-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "deepdiff>=8.6.1",
    "duckdb>=1.4.1",
    "fastexcel>=0.16.0",
    "marimo[mcp]>=0.16.5",
    "numpy>=2.3.4",
    "polars[sqlalchemy]>=1.34.0",
    "pyarrow>=22.0.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "websockets>=15.0.1",
]
